bk_ida/gccida/c1/get_true_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_true_reg/src/reg-stack.c:1049:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_true_reg/src/reg-stack.c:1049:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_true_reg/src/reg-stack.c:1051:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v3))] 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_true_reg/src/obj/reg-stack.o] Error 1
